--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,35 +9,57 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
-  async: ^2.13.0
-  auto_route: ^10.1.0+1
+
   cupertino_icons: ^1.0.8
-  dartx: ^1.2.0
+
+  # State Management
   flutter_bloc: ^9.1.1
-  flutter_local_notifications: ^19.2.1
-  flutter_screenutil: ^5.9.3
+  equatable: ^2.0.5
+
+  # Dependency Injection
   get_it: ^8.0.3
-  injectable: ^2.5.0
-  rxdart: ^0.28.0
+  injectable: ^2.3.2
+
+  # Network
+  dio: ^5.3.2
+  connectivity_plus: ^6.1.4
+  pretty_dio_logger: ^1.3.1
+
+  # Storage
+  flutter_secure_storage: ^9.2.4
+  shared_preferences: ^2.2.2
+
+  # Functional Programming
+  dartz: ^0.10.1
+
+  # JSON Serialization
+  json_annotation: ^4.8.1
+  json_serializable: ^6.7.1
+
+  # Navigation
+  go_router: ^15.1.2
+
+  # UI
+  flutter_spinkit: ^5.2.0
+  fluttertoast: ^8.2.4
+
+  # Utils
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
+  # Code Generation
+  build_runner: ^2.4.7
+  injectable_generator: ^2.4.1
+
+  # Linting
   flutter_lints: ^6.0.0
-  auto_route_generator: ^10.1.0
+
+  # Testing
+  mockito: ^5.4.2
   bloc_test: ^10.0.0
-  build_runner: ^2.4.15
-  custom_lint: ^0.7.5
-  flutter_gen_runner: ^5.10.0
-  flutter_launcher_icons: ^0.14.3
-  flutter_native_splash: ^2.4.6
-  freezed: ^3.0.6
-  freezed_annotation: ^3.0.0
-  injectable_generator: ^2.7.0
-  logging: ^1.3.0
-  mocktail: ^1.0.4
 
 flutter:
   uses-material-design: true
