--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,6 @@ dependencies:
   # Network
   dio: ^5.3.2
   connectivity_plus: ^6.1.4
-  pretty_dio_logger: ^1.3.1
 
   # Storage
   flutter_secure_storage: ^9.2.4
@@ -45,6 +44,7 @@ dependencies:
 
   # Utils
   intl: ^0.20.2
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
